<resources>
    <string name="app_name">WAP</string>
    <string name="action_settings">Settings</string>
    <string name="action_license">License</string>
    <string name="strBtn1">네이버웹툰</string>
    <string name="strBtn2">가우스 전자</string>
    <string name="strBtn3">Test</string>
    <string name="strBtn4">알림 테스트 버튼</string>
    <string name="title_activity_settings">환경 설정</string>
    <string name="listview">listview</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Input URL</string>
    <string name="pref_default_display_name">Please Input Webtoon URL</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">데이터 설정</string>

    <string name="pref_title_sync_frequency">데이터 갱신 주기 설정</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 분</item>
        <item>30 분</item>
        <item>1 시간</item>
        <item>3 시간</item>
        <item>6 시간</item>
        <item>하지않음</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">알림 설정</string>

    <string name="pref_title_new_message_notifications">알림을 받겠습니까</string>

    <string name="pref_title_ringtone">벨소리 설정</string>
    <string name="pref_ringtone_silent">무음</string>

    <string name="pref_title_vibrate">진동 설정</string>

    <string name="pref_title_notificaion">알림 설정</string>

    <string name="pref_header_app_data">앱 정보</string>

    <string name="pref_title_app_data">앱 정보</string>

    <string name="pref_title_app_del_Infor">개발자 정보</string>

    <string name="pref_title_app_License">라이센스 정보</string>

    <string name="pref_title_app_git">Github</string>
</resources>
