<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="app_data"
        android:summary="@string/pref_title_app_del_Infor"
        android:title="@string/pref_title_app_del_Infor">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/dytlgozj/WebtoonAlarm/wiki"></intent>
    </Preference>

    <!-- 구현이 안된 부분 주석처리. 링크로 다시 대체 -->
    <Preference
        android:key="app_data"
        android:title="@string/pref_title_app_License">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://opensource.org/licenses/MIT"></intent>
        <!--<intent android:action="android.intent.action.Lincense"></intent>-->
    </Preference>

    <Preference
        android:key="app_data"
        android:title="@string/pref_title_app_git">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/dytlgozj/WebtoonAlarm"></intent>
    </Preference>

</PreferenceScreen>
